# dotfiles

./: .editorconfig  .envrc  .gitignore  .sops.yaml  .yamllint.yaml  LICENSE  README.md  configuration.nix  flake.nix  hardware-configuration.nix
.github/workflows/: build.yml  cache-flake-output.yaml  cache-nixpkgs-pkg.yaml  cachix.yaml  cachix.yml  deploy.yml  nixpkgs-review.yaml  npins_matrix.jq  update-npins.yml  update.yaml  update.yml
darwin/: flake-module.nix
darwin/charlie/: default.nix
devshell/: flake-module.nix
devshell/ci/: default.nix
devshell/default/: default.nix
devshell/xmonad/: default.nix
home-manager/: flake-module.nix
home-manager/corgi/: default.nix
home-manager/husky/: default.nix
home-manager/samoyed/: default.nix
home-manager/shiba/: default.nix
hosts/shiba-asus/: default.nix  secrets.yaml
keyboards/: build-qmk.nix  flake-module.nix  flash-qmk.nix
keyboards/beekeeb-3w6hs/: config.h  keyboard.json
keyboards/npins/: sources.json
lib/: flake-module.nix
nixos/: flake-module.nix
nixos/alpha/: default.nix
nixos/bravo/: default.nix
nixos/delta/: README.md  default.nix  hardware.nix
nixos/users/: default.nix
pkgs/: default.nix  flake-module.nix  flake.nix
pkgs/bspwm/: default.nix
pkgs/catppuccin-fish/: default.nix
pkgs/catppuccin-gitui/: default.nix
pkgs/catppuccin-mako/: default.nix
planet/: flake-module.nix
planet/modules/home-manager/xmonad/: default.nix  xmonad-config.cabal
planet/modules/home-manager/xmonad/src/: Main.hs
templates/: flake-module.nix
users/: default.nix  secrets.yaml
(+619 files in other folders)
