cabal-version: 3.0
name:          xmonad-config
version:       0.1.0.0
author:        Dixon Sean Low Yan Feng
maintainer:    dixonseanlow@protonmail.com
build-type:    Simple

common warnings
  ghc-options: -Wall

executable xmonad-config
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , base
    , containers
    , xmonad
    , xmonad-contrib

  hs-source-dirs:   src
  default-language: Haskell2010
